@@ -1,5 +1,14 @@
 2005-03-21  Alan Modra  <amodra@bigpond.net.au>
 
+	PR gas/780
+	* config/tc-m68k.c (TRUNC, SEXT): Define.
+	(issbyte, isubyte, issword, isuword, isbyte, isword): Use the above.
+	(m68k_ip): Truncate or sign extend expressions as appropriate.
+	(get_num): Likewise.
+	(md_apply_fix3): Use SEXT.
+
+2005-03-21  Alan Modra  <amodra@bigpond.net.au>
+
 	* Makefile.am (OBJ_FORMAT_CFILES): Prune config/obj-vms.c.
 	(OBJ_FORMAT_HFILES): Prune config/obj-vms.h.
 	(obj-vms.o): Delete rule.
